--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -37,4 +37,11 @@ img{
     border: none;
     vertical-align: top;
 }
-  
+::selection {
+    background: black; 
+    color: white;
+}
+
+.element {
+    cursor: default;
+}
