--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 /*pc*/
+.pc{
+    display: block;
+}
+.mo{
+    display: none;
+}
 /*container01*/
 .container01 {
     width: 100%;
@@ -461,7 +467,7 @@
 /* 태블릿 (1024px 이하) */
 @media (max-width: 1024px) {
     .container01 .title-text {
-        font-size: 16px;
+        font-size: 0.8rem;
     }
     .container01 .title .highlight {
         font-size: 120px;
@@ -489,24 +495,130 @@
 
 /* 모바일 (768px 이하) */
 @media (max-width: 768px) {
+    .pc{
+        display: none;
+    }
+    .mo{
+        display: block;
+    }
+    .container01{
+        height: 100%;
+    }
+    .container01 .contents{
+        padding-bottom: 20vh;
+    }
+    .container01 .title{
+        flex-direction: column-reverse;
+    }
     .container01 .title .highlight {
-        font-size: 80px;
+        font-size: 2rem;
+        margin: 3% 0;
+    }
+    .container01 .title:nth-of-type(1){
+        display: flex;
+        flex-direction: row;
+    }
+    .container01 .title:nth-of-type(3){
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    .container01 .title:nth-of-type(1),.container01 .title:nth-of-type(2){
+        margin-bottom: 0;
+    }
+    .container01 .title:nth-of-type(1) .highlight{
+        width: 100%;
+        text-align: left;
+    }
+    .container01 .title:nth-of-type(2) .highlight{
+        font-size: 4.5rem;
+    }
+    .container01 .title:nth-of-type(3) .highlight{
+        width: 100%;
+        text-align: left;
+        margin-left: -3%;
+    }
+    .container01 .pc{
+        display: none;
+    }
+    .container01 .tag{
+        font-size: 1.2rem;
+        margin: 0;
+        padding: 1% 3%;
+    }
+    .container01 .mo{
+        margin-right: 10%;
+    }
+    
+    .container01 .circle.small {
+        display: none;
+    }
+    .container01 .circle.large {
+        display: none;
     }
     .container02 .title-text,
     .container03 .title-text,
     .container04 .title-text {
-        font-size: 48px;
+        font-size: 2.5rem;
     }
     .container02,
     .container04 {
         padding: 6em 2em;
     }
+    .container02 .sub-title-text{
+        width: 40%;
+        font-size: 0.9rem;
+    }
+    .container02 .contents .contents-text {
+        width: 100%;
+        height: 500px;
+        margin: 0;
+        padding: 3em 0;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .container02 .contents .contents-text .left-text{
+        text-align: left;
+    }
     .container02 .contents .contents-text .left-text p {
-        font-size: 45px;
-        line-height: 55px;
+        font-size: 2rem;
+        line-height: 42px;
     }
     .container02 .contents .contents-text .right-text p {
-        font-size: 70px;
+        margin-top: 20px;
+        font-size: 4rem;
+    }
+    .container02 .contents .text-all{
+        flex-direction: column;
+        padding: 3em 2em;
+        border-radius: 30px;
+    }
+    .container02 .contents .text-all p:nth-of-type(1){
+        width: 50%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .container02 .contents .text-all p:nth-of-type(2){
+        margin-top: 10%;
+        margin-left: 0;
+    }
+    .container02 .skill .skill-all{
+        flex-direction: column;
+    }
+    .container02 .skill .skill-canvas{
+        width: 500px;
+        height: 500px;
+    }
+    .container02 .skill .skill-text ul{
+        display: flex;
+        flex-wrap: wrap;   
+        width: 80%;
+        margin: 0 auto;
+    }
+    .container02 .skill .skill-text ul li{
+        font-size: 1.125rem;
+    }
+    .container02 .skill .skill-info h2{
+        font-size: 3rem;
     }
     .container03 .contents {
         grid-template-columns: repeat(1, 1fr);
@@ -517,60 +629,10 @@
     .container03 .contents .wrap-text h2 {
         font-size: 24px;
     }
-}
-
-/* 작은 모바일 (480px 이하) */
-@media (max-width: 480px) {
-    .container01 .title .highlight {
-        font-size: 60px;
-    }
-    .container02 .title-text,
-    .container03 .title-text,
-    .container04 .title-text {
-        font-size: 36px;
-    }
-    .container02 .contents .contents-text .left-text p {
-        font-size: 35px;
-        line-height: 45px;
-    }
-    .container02 .contents .contents-text .right-text p {
-        font-size: 50px;
-    }
-    .container03 .contents .wrap-text {
-        padding: 0.5em;
-    }
-    .container03 .contents .wrap-text h2 {
-        font-size: 20px;
-    }
-}
-.circle-text {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: center;
-    position: relative;
-    animation: rotateText 10s linear infinite;
-}
-
-@keyframes rotateText {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes rotateText {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
+    .container04 span{
+        font-size: 0.9375rem;
+        width: 100%;
+        display: inline-block;
+        white-space: normal
     }
 }
